# ParaLLM

./: .gitignore  LICENSE  Makefile  README.md  output.csv  pyproject.toml  requirements.txt  setup.py
data/: prompts.csv  prompts_more.csv
examples/: rag_config.yaml  run_rag_query.py
examples/docs_to_ingest/: bodo_info.txt
parallm/: __init__.py  __main__.py  bedrock_query.py  cli.py  gemini_query.py  model_query.py  query_utils.py
parallm/rag/: chunking.py  config.py  embedding.py  indexing.py  ingestion.py  pipeline.py  retrieval.py  storage.py
scripts/: bedrock.py  bedrock_list_models.py  bedrock_models.csv  bump_version.py  create_github_release.py
tests/test_rag/: test_chunking.py  test_config.py  test_embedding.py  test_indexing.py  test_ingestion.py
